# Valutron

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson_options.txt
cmd/vm/: AST.cc  AST.hh  Bytecode.cc  CMakeLists.txt  CPUThread.hh  Compiler.hh  Config.hh  Generation.cc  Generation.hh  Interpreter.cc  Interpreter.hh  Main.cc  Misc.hh  ObjectMemory.cc  ObjectMemory.hh  ObjectMemory.inl.hh  Objects.cc  Objects.hh  Oops.hh  Parser.y  Primitive.cc  Scanner.l  Scheduling.cc  Synth.cc  TypeFlow.cc  Typecheck.cc  Typecheck.hh  meson.build
docs/: Notes.md
lib/system/: dir.st  recfib.st
lib/system/Arch-Unix/: File.st  dir.st
lib/system/Collection/: Array.st  ByteArray.st  Collection.st  Dictionary.st  IndexedCollection.st  Interval.st  LinkedList.st  List.st  Set.st  dir.st
lib/system/Collections-Support/: Association.st  AssociationLink.st  Link.st  ValueLink.st  dir.st
lib/system/Collections-Text/: Char.st  Character.st  String.st  Symbol.st  dir.st
lib/system/Kernel-Exceptions/: Exception.st  dir.st
lib/system/Kernel-Methods/: Block.st  Context.st  Method.st  StackContext.st  StackFrame.st  dir.st
lib/system/Kernel-Native/: NativeCode.st  NativePointer.st  dir.st
lib/system/Kernel-Objects/: Boolean.st  Cache.st  False.st  Object.st  True.st  UndefinedObject.st  dir.st
lib/system/Kernel-Processes/: EventQueue.st  Process.st  Scheduler.st  Semaphore.st  VM.st  dir.st  old.Class.st  old.Metaclass.st
lib/system/Numeric-Magnitudes/: Magnitude.st  dir.st
lib/system/Numeric-Numbers/: Float.st  Fraction.st  Integer.st  LongInteger.st  Number.st  dir.st
test/: block.st  flow.st  genmeth.st  hkt.st  infer.st  inherit.st  inherit2.st  subinfer.st  test.st  union.st
tools/lemon/: CMakeLists.txt  lemon.c  lemon_base.h  lemxx.tpl  meson.build
